# dickinson

./: .ctags  .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  Vagrantfile  cabal.project  cabal.project.local  dickinson.cabal  hie.yaml  install.mk  language-dickinson.cabal  stack.yaml  weeder.toml
bash/: bindist-install  cross  display  install  install.sh  manpage  prof-install
bench/: Bench.hs  aarch64.html  x86_64-darwin.html  x86_64.html
bench/data/: multiple.dck  nestLet.dck
dickinson-fltk/: CHANGELOG.md  README.md  dickinson-fltk.cabal
dickinson-fltk/src/: Main.hs  SyntaxHighlight.hs
dickinson-gtk/: CHANGELOG.md  README.md  TODO.md  dickinson-gtk.cabal
dickinson-gtk/src/: Main.hs
doc/: user-guide.html  user-guide.md
docs/: index.html
examples/: axolotlsay.dck  ayeshaErotica.dck  catherineOfSienaBot.dck  cowpsalms.dck  divinationBot.dck  doggo.dck  fionaBot.dck  fortune.dck  hotTake.dck  insult.dck  magicalRealism.dck  shakespeare.dck  starwars.dck
foreign-src/: Export.hs
include/: dickinson.h
lib/: adjectives.dck  adverb.dck  animal.dck  birds.dck  brands.dck  clippy.dck  color.dck  cowsay.dck  flappend.dck  fruit.dck  gemstone.dck  geography.dck  mentalIllness.dck  noun.dck  nut.dck  profession.dck  states.dck  vegetable.dck  verb.dck
lib/fun/: bool.dck  vierergruppe.dck
lib/grammar/: common.dck  noun.dck  verb.dck
man/: MANPAGE.md  emd.1
mk/: compress.mk
prelude/: curry.dck  tuple.dck
pretty/Data/Text/Prettyprint/Doc/: Ext.hs
public/Language/: Dickinson.hs
public/Language/Dickinson/: QuasiQuoter.hs  TH.hs
run/: Format.hs  Main.hs  REPL.hs
run/REPL/: Completions.hs  Save.cpphs  Save.hs
src/: Word.hs
src/Control/Exception/: Value.hs
src/Control/Monad/: Ext.hs
src/Data/Foldable/: Ext.hs
src/Data/List/: Ext.hs
src/Data/Text/Prettyprint/Doc/: Ext.hs
src/Data/Tuple/: Ext.hs
src/Language/: Dickinson.hs
src/Language/Dickinson/: Check.hs  DuplicateCheck.hs  Error.hs  Eval.hs  File.hs  Import.hs  Lexer.x  Lib.hs  Name.hs  Parser.y  Pattern.hs  Pipeline.hs  Pretty.hs  Probability.hs  Rename.hs  ScopeCheck.hs  Type.hs  TypeCheck.hs  Unique.hs
src/Language/Dickinson/Check/: Common.hs  Duplicate.hs  Exhaustive.hs  Internal.hs  Pattern.hs  Scope.hs
src/Language/Dickinson/Lib/: Get.hs
src/Language/Dickinson/Pattern/: Useless.hs
src/Language/Dickinson/Rename/: Amalgamate.hs
test/: Eval.hs  Golden.hs  Pattern.hs  QQ.hs  Spec.hs  TH.hs  TypeCheck.hs
test/Roundtrip/: Compare.hs
test/data/: adt.dck  adt.pretty  color.dck  const.dck  escaped.dck  escaped.pretty  flattenLambda.dck  hangIndefinitely.dck  higerOrder.dck  higherOrder.dck  higherOrder.rename  illTyped.dck  import.dck  import.pretty  imports.dck  imports.pretty  interpolateNested.dck  lambda.dck  lambda.rename  lambdaMultiQuote.dck  lambdaMultiQuote.pretty  let.dck  let.rename  lexDollarSign.dck  lexDollarSign.pretty  multiLet.dck  multiLet.rename  multiQuoteify.dck  multiQuoteify.pretty  multiStr.dck  multiStr.pretty  multiple.dck  nestInterp.dck  nestInterp.pretty  nestLet.dck  nestLet.pretty  nestLet.rename  orPattern.dck  orPattern.pretty  pathologicalImports.dck  (+8 more)
test/demo/: animal.dck  circular.dck  exhaustive.dck  improbableScope.dck  inexhaustive.dck  mutual.dck  redundant.dck  sillyOption.dck  tyAnnot.dck
test/error/: badMatch.dck  constructorScope.dck  double.dck  illTyped.dck  inexhaustivePatternMatch.dck  lexErr.dck  mutual.dck  scoping.dck  tyConsDouble.dck  tyDouble.dck  tyScope.dck
test/eval/: choice.dck  chooseHigherOrder.dck  context.dck  cowrun.dck  local.dck  main.dck  match.dck  match.rename  matchSex.dck  matchSex.pretty  orExample.dck
test/examples/: declension.dck  declension.pretty  lambda.dck  library.dck  quote.dck  quote.pretty
tex/: spec.tex
vim/: README.md  build.vim  plugin.txt
vim/ftdetect/: dickinson.vim
vim/ftplugin/: dickinson.vim
vim/syntax/: dickinson.vim
vim/syntax_checkers/dickinson/: emd.vim
vim/sytnax/: dickinson.vim
