cabal-version:   2.0
name:            dickinson
version:         0.1.0.0
license:         BSD3
license-file:    LICENSE
copyright:       Copyright: (c) 2020 Vanessa McHale
maintainer:      vamchale@gmail.com
author:          Vanessa McHale
synopsis:        A language for generative literature
description:     Dickinson is a language for generative (random) literature
category:        Language, Text
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/dickinson

library
    exposed-modules:    Language.Dickinson
    build-tool-depends: alex:alex -any, happy:happy -any
    hs-source-dirs:     src
    other-modules:      Language.Dickinson.Lexer
                      , Language.Dickinson.Name
                      , Language.Dickinson.Type
                      , Language.Dickinson.Parser
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base >=4.3 && <5,
        bytestring -any,
        text -any,
        array,
        mtl,
        transformers

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages
