cabal-version:      2.0
name:               language-dickinson
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          Copyright: (c) 2020 Vanessa McHale
maintainer:         vamchale@gmail.com
author:             Vanessa McHale
synopsis:           A language for generative literature
description:        Dickinson is a language for generative (random) literature
category:           Language, Text
build-type:         Simple
data-files:         man/emd.1
extra-source-files:
    test/data/*.pretty
    test/data/*.dck
    test/data/*.rename
    lib/*.dck
    prelude/*.dck

extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/dickinson

flag cross
    description: Enable to ease cross-compiling
    default:     False
    manual:      True

library
    exposed-modules:  Language.Dickinson
    default-language: Haskell2010
    hs-source-dirs: public
    other-modules:
        Paths_language_dickinson
    autogen-modules:  Paths_language_dickinson
    build-depends:
        base >=4.9 && <5,
        dickinson
    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

library dickinson
    hs-source-dirs:   src
    exposed-modules:
        Language.Dickinson.Lexer
        Language.Dickinson.Name
        Language.Dickinson.Type
        Language.Dickinson.TypeCheck
        Language.Dickinson.Parser
        Language.Dickinson.Rename
        Language.Dickinson.Eval
        Language.Dickinson.Error
        Language.Dickinson.Pretty
        Language.Dickinson.Check
        Language.Dickinson.ScopeCheck
        Language.Dickinson.DuplicateCheck
        Language.Dickinson.Unique
        Language.Dickinson.File
        Language.Dickinson.Import
    other-modules:
        Language.Dickinson.Check.Pattern
        Control.Monad.Ext
        Data.Foldable.Ext

    default-language: Haskell2010
    other-extensions:
        DeriveAnyClass DeriveFunctor DeriveGeneric FlexibleContexts
        GeneralizedNewtypeDeriving OverloadedStrings StandaloneDeriving
        TupleSections

    ghc-options:      -Wall -O2
    build-depends:
        base >=4.9 && <5,
        bytestring -any,
        text -any,
        array -any,
        mtl -any,
        transformers -any,
        containers -any,
        random -any,
        prettyprinter -any,
        pretty-ext -any,
        deepseq -any,
        microlens -any,
        microlens-mtl -any,
        composition-prelude >=1.1.0.1,
        binary >=0.8.4.0,
        filepath -any,
        directory -any

    if !flag(cross)
        build-tool-depends: alex:alex -any, happy:happy -any

    if !impl(ghc >=8.0)
        build-depends: semigroups -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

library pretty-ext
    exposed-modules:  Data.Text.Prettyprint.Doc.Ext
    hs-source-dirs:   pretty
    default-language: Haskell2010
    build-depends:
        base -any,
        prettyprinter -any,
        text -any,
        containers -any

    if !impl(ghc >=8.0)
        build-depends: semigroups -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

executable emd
    main-is:          Main.hs
    hs-source-dirs:   run
    other-modules:    REPL
    default-language: Haskell2010
    ghc-options:      -Wall -rtsopts -with-rtsopts=-A4M
    build-depends:
        base -any,
        dickinson -any,
        optparse-applicative -any,
        bytestring -any,
        prettyprinter -any,
        text -any,
        haskeline >=0.8,
        mtl -any,
        random -any,
        microlens-mtl -any,
        microlens -any,
        containers -any,
        pretty-ext -any,
        filepath -any,
        directory -any,
        language-dickinson

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

test-suite dickinson-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:
        Golden
        Eval

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base -any,
        dickinson -any,
        tasty -any,
        tasty-hunit -any,
        bytestring -any,
        text -any,
        filepath -any,
        tasty-golden -any,
        pretty-ext -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

benchmark dickinson-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:      -Wall -rtsopts -with-rtsopts=-A4M
    build-depends:
        base -any,
        dickinson -any,
        binary -any,
        criterion -any,
        bytestring -any

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages
