name:                dickinson-fltk
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Vanessa
maintainer:          McHale
copyright:           Copyright: (c) 2021 Vanessa
category:            Language
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
cabal-version:       1.18

executable dickinson-gui
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , fltkhs
                     , language-dickinson
  default-language:    Haskell2010
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/vmchale/dickinson
  subdir: dickinson-fltk
