cabal-version:   1.18
name:            dickinson-fltk
version:         0.1.0.0
license:         GPL-3
license-file:    LICENSE
copyright:       Copyright: (c) 2021 Vanessa McHale
maintainer:      vamchale@gmail.com
author:          Vanessa McHale
synopsis:        GUI for Dickinson language
description:
    dickinson-fltk is a fltkhs-based GUI for the Dickinson language.

category:        Language
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/dickinson
    subdir:   dickinson-fltk

executable dickinson-gui
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:    SyntaxHighlight
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        fltkhs,
        language-dickinson,
        text,
        bytestring

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages
