cabal-version:   1.18
name:            dickinson-gtk
version:         0.1.0.0
license:         BSD3
license-file:    LICENSE
copyright:       Copyright: (c) 2020 Vanessa McHale
maintainer:      vamchale@gmail.com
author:          Vanessa McHale
synopsis:        Dickinson IDE
description:     An experimental Dickinson IDE
category:        Language, Interpreters, IDEs
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/dickinson
    subdir:   dickinson-gtk

flag development
    description: Enable `-Werror`
    default:     False
    manual:      True

executable dickinson-ide
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base >=4.3 && <5,
        gi-gtk -any,
        gi-gtk-declarative -any,
        gi-gtk-declarative-app-simple -any,
        text -any,
        language-dickinson >=1.4.1.0

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages
